{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 41,
  "lineage": "8f665d69-5b40-ffe1-fc0c-161196a37b7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cisco_asav_elastic_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ae107e433b20be6",
            "arn": "arn:aws:ec2:us-east-1:992382750911:elastic-ip/eipalloc-02ae107e433b20be6",
            "association_id": "eipassoc-0f817e27d1d2032a6",
            "domain": "vpc",
            "id": "eipalloc-02ae107e433b20be6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07ce85d6b4e7a9580",
            "private_dns": "ip-10-100-100-175.ec2.internal",
            "private_ip": "10.100.100.175",
            "public_dns": "ec2-44-209-205-232.compute-1.amazonaws.com",
            "public_ip": "44.209.205.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_network_interface.asav_public_interface",
            "aws_subnet.aws_public_subnet",
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:internet-gateway/igw-07e0151f3943dee14",
            "id": "igw-07e0151f3943dee14",
            "owner_id": "992382750911",
            "tags": {
              "Name": "Aws_IGW"
            },
            "tags_all": {
              "Name": "Aws_IGW"
            },
            "vpc_id": "vpc-0c7b1b323e373ee53"
          },
          "dependencies": [
            "aws_vpc.Security_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "sl_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:network-acl/acl-0141cc33474f830dc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 150,
                "to_port": 0
              }
            ],
            "id": "acl-0141cc33474f830dc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "992382750911",
            "subnet_ids": [],
            "tags": {
              "Name": "SL_Public_Subnet"
            },
            "tags_all": {
              "Name": "SL_Public_Subnet"
            },
            "vpc_id": "vpc-0c7b1b323e373ee53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Security_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "sL_sublic_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a490a3b20097b9a4",
            "network_acl_id": "acl-0141cc33474f830dc",
            "subnet_id": "subnet-0a33e3c8ce478206e"
          },
          "dependencies": [
            "aws_network_acl.sl_public_subnet",
            "aws_subnet.aws_public_subnet",
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "asav_mgmt_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:network-interface/eni-073ccb071bff9c2ff",
            "id": "eni-073ccb071bff9c2ff",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:30:bb:47:cb:a5",
            "owner_id": "992382750911",
            "private_ip": "10.100.100.21",
            "private_ip_list": [
              "10.100.100.21"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.100.21"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0207b93f12b9a4b39"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0beb722137a657191",
            "tags": {
              "Name": "CiscoASAvmgmt_interface"
            },
            "tags_all": {
              "Name": "CiscoASAvmgmt_interface"
            }
          },
          "dependencies": [
            "aws_subnet.MGMT_Subnet_Security_VPC",
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "asav_private_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:network-interface/eni-0be7b1b32f16ed34c",
            "id": "eni-0be7b1b32f16ed34c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f9:78:1c:7d:d1",
            "owner_id": "992382750911",
            "private_ip": "10.100.100.100",
            "private_ip_list": [
              "10.100.100.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.100.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0207b93f12b9a4b39"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-009fb7a125c8595fc",
            "tags": {
              "Name": "CiscoASAvPrivateInterface"
            },
            "tags_all": {
              "Name": "CiscoASAvPrivateInterface"
            }
          },
          "dependencies": [
            "aws_subnet.Private_Subnet_Security_VPC",
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "asav_public_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:network-interface/eni-07ce85d6b4e7a9580",
            "id": "eni-07ce85d6b4e7a9580",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:89:28:92:1e:19",
            "owner_id": "992382750911",
            "private_ip": "10.100.100.175",
            "private_ip_list": [
              "10.100.100.175"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.100.175"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0207b93f12b9a4b39"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a33e3c8ce478206e",
            "tags": {
              "Name": "CiscoASAvPublicInterface"
            },
            "tags_all": {
              "Name": "CiscoASAvPublicInterface"
            }
          },
          "dependencies": [
            "aws_subnet.aws_public_subnet",
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:route-table/rtb-0e62b928551197865",
            "id": "rtb-0e62b928551197865",
            "owner_id": "992382750911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e0151f3943dee14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7b1b323e373ee53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Security_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Routing_Assoicataion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05afb7e09b1940004",
            "route_table_id": "rtb-0e62b928551197865",
            "subnet_id": "subnet-0a33e3c8ce478206e"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_route_table",
            "aws_subnet.aws_public_subnet",
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MGMT_Subnet_Security_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-0beb722137a657191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.100.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beb722137a657191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Security_VPC"
            },
            "tags_all": {
              "Name": "Private_Subnet_Security_VPC"
            },
            "vpc_id": "vpc-0c7b1b323e373ee53"
          },
          "dependencies": [
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_Security_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-009fb7a125c8595fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.100.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009fb7a125c8595fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_Security_VPC"
            },
            "tags_all": {
              "Name": "Private_Subnet_Security_VPC"
            },
            "vpc_id": "vpc-0c7b1b323e373ee53"
          },
          "dependencies": [
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:subnet/subnet-0a33e3c8ce478206e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.100.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a33e3c8ce478206e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382750911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ASAv_AwsPublicSubnet"
            },
            "tags_all": {
              "Name": "ASAv_AwsPublicSubnet"
            },
            "vpc_id": "vpc-0c7b1b323e373ee53"
          },
          "dependencies": [
            "aws_vpc.Security_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Security_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382750911:vpc/vpc-0c7b1b323e373ee53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.100.0/24",
            "default_network_acl_id": "acl-0f64e024d5951c990",
            "default_route_table_id": "rtb-0a3dfd32e953da412",
            "default_security_group_id": "sg-0207b93f12b9a4b39",
            "dhcp_options_id": "dopt-0f7b6b6048cac8286",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c7b1b323e373ee53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3dfd32e953da412",
            "owner_id": "992382750911",
            "tags": {
              "Name": "Security VPC"
            },
            "tags_all": {
              "Name": "Security VPC"
            }
          }
        }
      ]
    }
  ]
}